# ezcalc

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
NBS/: BUG.bc  Makefile  aryprm.b  checklib.b  ls.txt  primes.b  twins.b
NBS_run_output/: BUG.run  array.run  arrayp.run  aryprm.run  atan.run  div.run  exp.run  fact.run  jn.run  ln.run  mul.run  primes.run  raise.run  sine.run  sqrt.run  sqrt1.run  sqrt2.run  twins.run
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
debian/: README.Debian  README.source  changelog  control  copyright
share/ezcalc/: add.ec  add2.ec  and.ec  and2.ec  arithematic.ec  hello2.ec  print.ec  ret.ec  swap.ec  trigonometric.ec  while.ec
src/: Makefile.am  Makefile.in  block.cc  block.h  main.cc  parse.yy  procstack.cc  procstack.h  scan.ll
src/io/: ecio.cc  ecio.h
src/math/: ecmath.cc  ecmath.h
test_case/: add.ec.outref  arithematic.ec.outref  print.ec.outref  test  trigonometric.ec.outref  while.ec.outref
